# deer-flow-quickstart

./: .gitignore  BRANDING.md  CONTRIBUTING  README.md  check.js  cobalt-pod-ssh  cobalt-pod-ssh.pub  implementation_plan.md  lint.js  requirements.txt  run_debug.py  run_debug10.py  run_debug11.py  run_debug12.py  run_debug13.py  run_debug2.py  run_debug3.py  run_debug4.py  run_debug5.py  run_debug6.py  run_debug9.py  scratch.py  temp.js  test_app.py  test_final_final_final.txt  test_final_indicators.txt  verify_memory.py  vli_test.db
backend/: .gitignore  VLI_session_dashboard.html  aapl_mtf_sample.md  agent.json  check_tools.py  check_yf.py  conf.yaml.example  debug_graph.py  debug_imports.py  debug_rules.py  diag2.py  diagnose_smc_logic.py  direct.json  fix_m_struct.py  init_watchlists.py  langgraph.json  main.py  morning_session_visualizer.html  msft_raw_smc.json  out.json  print_fails.py  pyproject.toml  pytest_unit_results.txt  read_test.py  report.json  reproduce_429_bug.py  reproduce_cache_issue.py  reproduce_final.py  reproduce_isolated_quota.py  reproduce_vix_bug.py  requirements.txt  ruff.toml  run_clean.py  run_debug.py  scratch.py  server.py  show_trace.py  simulate_morning_routine.py  simulation_history.json  standalone_scout_diagnostic.py  (+63 more)
backend/data/: vli_main.db
backend/docs/: CONFIGURATION.md
backend/examples_error_59e7de16e3fe4879a5e5b626538a6fde/: good.md
backend/examples_test_2879a729df1e464aa7d0aa4bdddc9fe5/: ignore.txt
backend/examples_test_8e6af1e4f1a04a4dbe20a54a2bed7946/: file1.md  file_two.md
backend/examples_test_load_skip/: file1.md  file2.md
backend/examples_test_single_chunk/: single.md
backend/public/: VLI_session_dashboard.html  index.html  minimal_chat.html  vli_debug.html
backend/scratch/: check_yf.py  debug_api_state.py  debug_compaction_fallback.py  debug_intent.py  debug_sparklines.py  debug_sparklines_v2.py  debug_sparklines_v3.py  debug_sparklines_v4.py  debug_timeout.py  inspect_mongo.py  report_test.md  repro_admin.py  reproduce_nvidia.py  sparkline_audit.py  sparkline_monitor.py  sparkline_test_math.py  sparkline_test_math2.py  telemetry_out.md  test_asset_bucket.py  test_compaction.py  test_intent_routing.py  test_invalidation.py  test_macros.py  test_quotes.py  test_recovery.py  test_sanitizer_bug.py  test_scheduler_priority.py  test_smc_graph.py  test_smc_tool.py  test_underscores.py  test_vli_aapl.py  test_vli_logic_standalone.py  test_vli_macro_flow.py  test_vli_nvidia_flow.py  test_yf_bare.py  trace_diagnostic.py  verify_gemini_fix.py  verify_search_persistence_patch.py
backend/scripts/: bench_consistency.py  bootstrap_vli_env.py  build_prod.py  call_vli.py  cobalt.code-workspace  cobalt_ctl.py  dashboard_vli.py  debug_list_models.py  deep_history_verify.py  diag_smc.py  fetch_msft.py  init_diagnostic.py  migrate_ux_cards.py  mock_storage_workflow.py  quota_verify.py  replay_latency_fix.py  replay_verify.py  repro_sdk_block.py  (+53 more)
(+381 files in other folders)
